Fix Daira Tests